Fixed gradient background stretching an smaller screens Now the footer stays in the bottom Minor improvements

--- a/stylesheet/stylesheet.css
+++ b/stylesheet/stylesheet.css
@@ -1,8 +1,11 @@
 html {
     background: rgb(2, 0, 36);
-    background: linear-gradient(135deg, rgba(52, 152, 219, 1.0) 0%, rgba(35, 111, 160, 1.0) 100%);
+    background: linear-gradient(135deg, rgba(52, 152, 219, 1.0) 0%, rgba(35, 111, 160, 1.0) 100%) fixed;
     font-family: 'Lato', sans-serif;
-    min-height: 100%;
+}
+
+html, body {
+    height: 100%;
 }
 
 #title {
@@ -19,15 +22,17 @@ html {
 .section_title {
     font-size: 30px;
     color: #ecf0f1;
+    text-align: center;
 }
 
 p {
-    white-space: pre-wrap;
     word-wrap: break-word;
     color: #cacfd2;
 }
 
 * {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
@@ -51,16 +56,27 @@ p {
     clear: both;
 }
 
-.container {
+.image_container {
     display: table;
     width: 100%;
     height: 10%;
 }
 
+#main {
+    overflow: auto;
+    padding-bottom: 50px;
+}
+
+#container {
+    min-height: 100%;
+}
+
 .footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
+    background-color: #000;
+    position: relative;
+    height: 50px;
+    margin-top: -50px;
+    clear: both;
     width: 100%;
     opacity: 1;
     background-color: rgba(0, 0, 0, 0.3);
@@ -71,6 +87,15 @@ p {
 @media screen and (max-width: 600px) {
     .column {
         width: 100%;
+        margin-bottom: 50px;
+    }
+
+    #subtitle {
+        margin-bottom: 20px;
+    }
+
+    .section_title {
+        margin-bottom: 10px;
     }
 }
 
